syntax="proto3";

package dna_pb;
option go_package = "pkg/proto/dna_pb";

message DNARequest {
    repeated string dna = 1;
}

message DNAResponse {
    string typeDNA = 1;
    string dnaError = 2;
}

service DNAServiceAnalyzer {
    rpc Analyze(DNARequest) returns (DNAResponse) {};
}